feat: builder resource calculator and fried fish materials
Co-authored-by: Cursor <cursoragent@cursor.com>